docs/cobblemon-tags/1.4.1/ItemTags.md
# Item Tags

This file contains tags related to items in cobblemon.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:apricorns</summary>

- cobblemon:black_apricorn
- cobblemon:blue_apricorn
- cobblemon:green_apricorn
- cobblemon:pink_apricorn
- cobblemon:red_apricorn
- cobblemon:white_apricorn
- cobblemon:yellow_apricorn

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_sprouts</summary>

- cobblemon:black_apricorn_seed
- cobblemon:blue_apricorn_seed
- cobblemon:green_apricorn_seed
- cobblemon:pink_apricorn_seed
- cobblemon:red_apricorn_seed
- cobblemon:white_apricorn_seed
- cobblemon:yellow_apricorn_seed

</details>

<details>
<summary><b>Tag:</b> #cobblemon:azalea_tree</summary>

- minecraft:azalea
- minecraft:flowering_azalea

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berries</summary>

- cobblemon:aguav_berry
- cobblemon:apicot_berry
- cobblemon:aspear_berry
- cobblemon:babiri_berry
- cobblemon:belue_berry
- cobblemon:bluk_berry
- cobblemon:charti_berry
- cobblemon:cheri_berry
- cobblemon:chesto_berry
- cobblemon:chilan_berry
- cobblemon:chople_berry
- cobblemon:coba_berry
- cobblemon:colbur_berry
- cobblemon:cornn_berry
- cobblemon:custap_berry
- cobblemon:durin_berry
- cobblemon:enigma_berry
- cobblemon:figy_berry
- cobblemon:ganlon_berry
- cobblemon:grepa_berry
- cobblemon:haban_berry
- cobblemon:hondew_berry
- cobblemon:hopo_berry
- cobblemon:iapapa_berry
- cobblemon:jaboca_berry
- cobblemon:kasib_berry
- cobblemon:kebia_berry
- cobblemon:kee_berry
- cobblemon:kelpsy_berry
- cobblemon:lansat_berry
- cobblemon:leppa_berry
- cobblemon:liechi_berry
- cobblemon:lum_berry
- cobblemon:mago_berry
- cobblemon:magost_berry
- cobblemon:maranga_berry
- cobblemon:micle_berry
- cobblemon:nanab_berry
- cobblemon:nomel_berry
- cobblemon:occa_berry
- cobblemon:oran_berry
- cobblemon:pamtre_berry
- cobblemon:passho_berry
- cobblemon:payapa_berry
- cobblemon:pecha_berry
- cobblemon:persim_berry
- cobblemon:petaya_berry
- cobblemon:pinap_berry
- cobblemon:pomeg_berry
- cobblemon:qualot_berry
- cobblemon:rabuta_berry
- cobblemon:rawst_berry
- cobblemon:razz_berry
- cobblemon:rindo_berry
- cobblemon:roseli_berry
- cobblemon:rowap_berry
- cobblemon:salac_berry
- cobblemon:shuca_berry
- cobblemon:sitrus_berry
- cobblemon:spelon_berry
- cobblemon:starf_berry
- cobblemon:tamato_berry
- cobblemon:tanga_berry
- cobblemon:touga_berry
- cobblemon:wacan_berry
- cobblemon:watmel_berry
- cobblemon:wepear_berry
- cobblemon:wiki_berry
- cobblemon:yache_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:boats</summary>

- cobblemon:apricorn_boat
- cobblemon:apricorn_chest_boat

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cobblemon_seeds</summary>

- cobblemon:blue_mint_seeds
- cobblemon:cyan_mint_seeds
- cobblemon:green_mint_seeds
- cobblemon:pink_mint_seeds
- cobblemon:red_mint_seeds
- cobblemon:vivichoke_seeds
- cobblemon:white_mint_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_items</summary>

- #cobblemon:evolution_stones
- cobblemon:berry_sweet
- cobblemon:black_augurite
- cobblemon:chipped_pot
- cobblemon:clover_sweet
- cobblemon:cracked_pot
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth
- cobblemon:dragon_scale
- cobblemon:dubious_disc
- cobblemon:electirizer
- cobblemon:flower_sweet
- cobblemon:galarica_cuff
- cobblemon:galarica_wreath
- cobblemon:kings_rock
- cobblemon:link_cable
- cobblemon:love_sweet
- cobblemon:magmarizer
- cobblemon:metal_coat
- cobblemon:oval_stone
- cobblemon:peat_block
- cobblemon:prism_scale
- cobblemon:protector
- cobblemon:reaper_cloth
- cobblemon:ribbon_sweet
- cobblemon:sachet
- cobblemon:star_sweet
- cobblemon:strawberry_sweet
- cobblemon:sweet_apple
- cobblemon:tart_apple
- cobblemon:upgrade
- cobblemon:whipped_dream

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_stones</summary>

- cobblemon:dawn_stone
- cobblemon:dusk_stone
- cobblemon:fire_stone
- cobblemon:ice_stone
- cobblemon:leaf_stone
- cobblemon:moon_stone
- cobblemon:shiny_stone
- cobblemon:sun_stone
- cobblemon:thunder_stone
- cobblemon:water_stone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:experience_candies</summary>

- cobblemon:exp_candy_l
- cobblemon:exp_candy_m
- cobblemon:exp_candy_s
- cobblemon:exp_candy_xl
- cobblemon:exp_candy_xs
- cobblemon:rare_candy

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hanging_signs</summary>

- cobblemon:apricorn_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:herbs</summary>

- cobblemon:mental_herb
- cobblemon:mirror_herb
- cobblemon:power_herb
- cobblemon:revival_herb
- cobblemon:white_herb

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mints</summary>

- cobblemon:adamant_mint
- cobblemon:bold_mint
- cobblemon:brave_mint
- cobblemon:calm_mint
- cobblemon:careful_mint
- cobblemon:gentle_mint
- cobblemon:hasty_mint
- cobblemon:impish_mint
- cobblemon:jolly_mint
- cobblemon:lax_mint
- cobblemon:lonely_mint
- cobblemon:mild_mint
- cobblemon:modest_mint
- cobblemon:naive_mint
- cobblemon:naughty_mint
- cobblemon:quiet_mint
- cobblemon:rash_mint
- cobblemon:relaxed_mint
- cobblemon:sassy_mint
- cobblemon:serious_mint
- cobblemon:timid_mint

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mint_leaf</summary>

- cobblemon:blue_mint_leaf
- cobblemon:cyan_mint_leaf
- cobblemon:green_mint_leaf
- cobblemon:pink_mint_leaf
- cobblemon:red_mint_leaf
- cobblemon:white_mint_leaf

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mutated_berries</summary>

- cobblemon:aguav_berry
- cobblemon:apicot_berry
- cobblemon:belue_berry
- cobblemon:cornn_berry
- cobblemon:custap_berry
- cobblemon:durin_berry
- cobblemon:enigma_berry
- cobblemon:figy_berry
- cobblemon:ganlon_berry
- cobblemon:grepa_berry
- cobblemon:hondew_berry
- cobblemon:hopo_berry
- cobblemon:iapapa_berry
- cobblemon:jaboca_berry
- cobblemon:kee_berry
- cobblemon:kelpsy_berry
- cobblemon:lansat_berry
- cobblemon:leppa_berry
- cobblemon:liechi_berry
- cobblemon:lum_berry
- cobblemon:mago_berry
- cobblemon:magost_berry
- cobblemon:maranga_berry
- cobblemon:micle_berry
- cobblemon:nomel_berry
- cobblemon:pamtre_berry
- cobblemon:petaya_berry
- cobblemon:pomeg_berry
- cobblemon:qualot_berry
- cobblemon:rabuta_berry
- cobblemon:rowap_berry
- cobblemon:salac_berry
- cobblemon:sitrus_berry
- cobblemon:spelon_berry
- cobblemon:starf_berry
- cobblemon:tamato_berry
- cobblemon:touga_berry
- cobblemon:watmel_berry
- cobblemon:wiki_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:plants</summary>

- #cobblemon:apricorn_sprouts
- #cobblemon:apricorns
- #cobblemon:berries
- #cobblemon:cobblemon_seeds
- #cobblemon:herbs
- #cobblemon:mint_leaf
- cobblemon:big_root
- cobblemon:energy_root
- cobblemon:medicinal_leek
- cobblemon:pep_up_flower
- cobblemon:vivichoke

</details>

<details>
<summary><b>Tag:</b> #cobblemon:poke_balls</summary>

- cobblemon:azure_ball
- cobblemon:beast_ball
- cobblemon:cherish_ball
- cobblemon:citrine_ball
- cobblemon:dive_ball
- cobblemon:dream_ball
- cobblemon:dusk_ball
- cobblemon:fast_ball
- cobblemon:friend_ball
- cobblemon:great_ball
- cobblemon:heal_ball
- cobblemon:heavy_ball
- cobblemon:level_ball
- cobblemon:love_ball
- cobblemon:lure_ball
- cobblemon:luxury_ball
- cobblemon:master_ball
- cobblemon:moon_ball
- cobblemon:nest_ball
- cobblemon:net_ball
- cobblemon:park_ball
- cobblemon:poke_ball
- cobblemon:premier_ball
- cobblemon:quick_ball
- cobblemon:repeat_ball
- cobblemon:roseate_ball
- cobblemon:safari_ball
- cobblemon:slate_ball
- cobblemon:sport_ball
- cobblemon:timer_ball
- cobblemon:ultra_ball
- cobblemon:verdant_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:protein_ingredients</summary>

- minecraft:beef
- minecraft:chicken
- minecraft:mutton
- minecraft:porkchop
- minecraft:rabbit

</details>

<details>
<summary><b>Tag:</b> #cobblemon:seeds</summary>

- #cobblemon:cobblemon_seeds
- minecraft:beetroot_seeds
- minecraft:melon_seeds
- minecraft:pumpkin_seeds
- minecraft:wheat_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- cobblemon:apricorn_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:zinc_ingredients</summary>

- minecraft:cod
- minecraft:salmon
- minecraft:tropical_fish

</details>

<details>
<summary><b>Tag:</b> #held:consumed_in_npc_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #held:consumed_in_pvp_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #held:consumed_in_wild_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #held:destiny_knot</summary>

- cobblemon:destiny_knot

</details>

<details>
<summary><b>Tag:</b> #held:everstone</summary>

- cobblemon:everstone

</details>

<details>
<summary><b>Tag:</b> #held:experience_share</summary>

- cobblemon:exp_share

</details>

<details>
<summary><b>Tag:</b> #held:is_held_item</summary>

- cobblemon:assault_vest
- cobblemon:big_root
- cobblemon:black_belt
- cobblemon:black_glasses
- cobblemon:black_sludge
- cobblemon:bright_powder
- cobblemon:charcoal_stick
- cobblemon:choice_band
- cobblemon:choice_scarf
- cobblemon:choice_specs
- cobblemon:cleanse_tag
- cobblemon:destiny_knot
- cobblemon:dragon_fang
- cobblemon:everstone
- cobblemon:exp_share
- cobblemon:fairy_feather
- cobblemon:flame_orb
- cobblemon:focus_band
- cobblemon:hard_stone
- cobblemon:heavy_duty_boots
- cobblemon:leftovers
- cobblemon:life_orb
- cobblemon:light_clay
- cobblemon:magnet
- cobblemon:mental_herb
- cobblemon:metal_powder
- cobblemon:miracle_seed
- cobblemon:mirror_herb
- cobblemon:muscle_band
- cobblemon:mystic_water
- cobblemon:never_melt_ice
- cobblemon:poison_barb
- cobblemon:power_anklet
- cobblemon:power_band
- cobblemon:power_belt
- cobblemon:power_bracer
- cobblemon:power_herb
- cobblemon:power_lens
- cobblemon:power_weight
- cobblemon:quick_claw
- cobblemon:quick_powder
- cobblemon:razor_claw
- cobblemon:razor_fang
- cobblemon:rocky_helmet
- cobblemon:safety_goggles
- cobblemon:sharp_beak
- cobblemon:silk_scarf
- cobblemon:silver_powder
- cobblemon:soft_sand
- cobblemon:spell_tag
- cobblemon:toxic_orb
- cobblemon:twisted_spoon
- cobblemon:wise_glasses
- cobblemon:wise_glasses

</details>

<details>
<summary><b>Tag:</b> #held:lucky_egg</summary>

- cobblemon:lucky_egg

</details>

<details>
<summary><b>Tag:</b> #held:power_anklet</summary>

- cobblemon:power_anklet

</details>

<details>
<summary><b>Tag:</b> #held:power_band</summary>

- cobblemon:power_band

</details>

<details>
<summary><b>Tag:</b> #held:power_belt</summary>

- cobblemon:power_belt

</details>

<details>
<summary><b>Tag:</b> #held:power_bracer</summary>

- cobblemon:power_bracer

</details>

<details>
<summary><b>Tag:</b> #held:power_lens</summary>

- cobblemon:power_lens

</details>

<details>
<summary><b>Tag:</b> #held:power_weight</summary>

- cobblemon:power_weight

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hanging_signs</summary>

- #cobblemon:hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs_that_burn</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:planks</summary>

- cobblemon:apricorn_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:villager_plantable_seeds</summary>

- cobblemon:blue_mint_seeds
- cobblemon:cyan_mint_seeds
- cobblemon:green_mint_seeds
- cobblemon:pink_mint_seeds
- cobblemon:red_mint_seeds
- cobblemon:revival_herb
- cobblemon:vivichoke_seeds
- cobblemon:white_mint_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_buttons</summary>

- cobblemon:apricorn_button

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_doors</summary>

- cobblemon:apricorn_door

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_pressure_plates</summary>

- cobblemon:apricorn_pressure_plate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_slabs</summary>

- cobblemon:apricorn_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_stairs</summary>

- cobblemon:apricorn_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_trapdoors</summary>

- cobblemon:apricorn_trapdoor

</details>
