docs/cobblemon-tags/1.5.2/ItemTags.md
# Item Tags

This file contains tags related to items in cobblemon.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:ability_changers</summary>

- cobblemon:ability_capsule
- cobblemon:ability_patch

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ancient_poke_balls</summary>

- cobblemon:ancient_poke_ball
- cobblemon:ancient_citrine_ball
- cobblemon:ancient_verdant_ball
- cobblemon:ancient_azure_ball
- cobblemon:ancient_roseate_ball
- cobblemon:ancient_slate_ball
- cobblemon:ancient_ivory_ball
- cobblemon:ancient_great_ball
- cobblemon:ancient_ultra_ball
- cobblemon:ancient_feather_ball
- cobblemon:ancient_wing_ball
- cobblemon:ancient_jet_ball
- cobblemon:ancient_heavy_ball
- cobblemon:ancient_leaden_ball
- cobblemon:ancient_gigaton_ball
- cobblemon:ancient_origin_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apples</summary>

- cobblemon:tart_apple
- cobblemon:sweet_apple

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns</summary>

- cobblemon:black_apricorn
- cobblemon:blue_apricorn
- cobblemon:green_apricorn
- cobblemon:pink_apricorn
- cobblemon:red_apricorn
- cobblemon:white_apricorn
- cobblemon:yellow_apricorn

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_poke_balls</summary>

- cobblemon:fast_ball
- cobblemon:friend_ball
- cobblemon:heavy_ball
- cobblemon:level_ball
- cobblemon:love_ball
- cobblemon:lure_ball
- cobblemon:moon_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_sprouts</summary>

- cobblemon:black_apricorn_seed
- cobblemon:blue_apricorn_seed
- cobblemon:green_apricorn_seed
- cobblemon:pink_apricorn_seed
- cobblemon:red_apricorn_seed
- cobblemon:white_apricorn_seed
- cobblemon:yellow_apricorn_seed

</details>

<details>
<summary><b>Tag:</b> #cobblemon:azalea_tree</summary>

- minecraft:azalea
- minecraft:flowering_azalea

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berries</summary>

- cobblemon:cheri_berry
- cobblemon:chesto_berry
- cobblemon:pecha_berry
- cobblemon:rawst_berry
- cobblemon:aspear_berry
- cobblemon:oran_berry
- cobblemon:persim_berry
- cobblemon:razz_berry
- cobblemon:bluk_berry
- cobblemon:nanab_berry
- cobblemon:wepear_berry
- cobblemon:pinap_berry
- cobblemon:leppa_berry
- cobblemon:lum_berry
- cobblemon:figy_berry
- cobblemon:wiki_berry
- cobblemon:mago_berry
- cobblemon:aguav_berry
- cobblemon:iapapa_berry
- cobblemon:sitrus_berry
- cobblemon:touga_berry
- cobblemon:cornn_berry
- cobblemon:magost_berry
- cobblemon:rabuta_berry
- cobblemon:nomel_berry
- cobblemon:enigma_berry
- cobblemon:pomeg_berry
- cobblemon:kelpsy_berry
- cobblemon:qualot_berry
- cobblemon:hondew_berry
- cobblemon:grepa_berry
- cobblemon:tamato_berry
- cobblemon:spelon_berry
- cobblemon:pamtre_berry
- cobblemon:watmel_berry
- cobblemon:durin_berry
- cobblemon:belue_berry
- cobblemon:kee_berry
- cobblemon:maranga_berry
- cobblemon:hopo_berry
- cobblemon:liechi_berry
- cobblemon:ganlon_berry
- cobblemon:salac_berry
- cobblemon:petaya_berry
- cobblemon:apicot_berry
- cobblemon:lansat_berry
- cobblemon:starf_berry
- cobblemon:micle_berry
- cobblemon:custap_berry
- cobblemon:jaboca_berry
- cobblemon:rowap_berry
- cobblemon:babiri_berry
- cobblemon:charti_berry
- cobblemon:chilan_berry
- cobblemon:chople_berry
- cobblemon:coba_berry
- cobblemon:colbur_berry
- cobblemon:haban_berry
- cobblemon:kasib_berry
- cobblemon:kebia_berry
- cobblemon:occa_berry
- cobblemon:passho_berry
- cobblemon:payapa_berry
- cobblemon:rindo_berry
- cobblemon:roseli_berry
- cobblemon:shuca_berry
- cobblemon:tanga_berry
- cobblemon:wacan_berry
- cobblemon:yache_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:black_tumblestones</summary>

- cobblemon:small_budding_black_tumblestone
- cobblemon:medium_budding_black_tumblestone
- cobblemon:large_budding_black_tumblestone
- cobblemon:black_tumblestone_cluster
- cobblemon:black_tumblestone_block
- cobblemon:black_tumblestone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:boats</summary>

- cobblemon:apricorn_boat
- cobblemon:apricorn_chest_boat

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cobblemon_seeds</summary>

- cobblemon:vivichoke_seeds
- #cobblemon:mint_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cooked_meat</summary>

- minecraft:cooked_beef
- minecraft:cooked_porkchop
- minecraft:cooked_chicken
- minecraft:cooked_mutton
- minecraft:cooked_rabbit
- minecraft:cooked_cod
- minecraft:cooked_salmon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dawn_stone_ores</summary>

- cobblemon:dawn_stone_ore
- cobblemon:deepslate_dawn_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:decorated_pot_sherds</summary>

- cobblemon:bygone_sherd
- cobblemon:capture_sherd
- cobblemon:dome_sherd
- cobblemon:helix_sherd
- cobblemon:nostalgic_sherd
- cobblemon:suspicious_sherd

</details>

<details>
<summary><b>Tag:</b> #cobblemon:deep_seas</summary>

- cobblemon:deep_sea_tooth
- cobblemon:deep_sea_scale

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dusk_stone_ores</summary>

- cobblemon:dusk_stone_ore
- cobblemon:deepslate_dusk_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ethers</summary>

- cobblemon:ether
- cobblemon:max_ether
- cobblemon:elixir
- cobblemon:max_elixir

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_items</summary>

- cobblemon:link_cable
- cobblemon:dragon_scale
- cobblemon:kings_rock
- cobblemon:metal_coat
- cobblemon:upgrade
- cobblemon:dubious_disc
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth
- cobblemon:electirizer
- cobblemon:magmarizer
- cobblemon:oval_stone
- cobblemon:protector
- cobblemon:reaper_cloth
- cobblemon:prism_scale
- cobblemon:sachet
- cobblemon:whipped_dream
- cobblemon:strawberry_sweet
- cobblemon:love_sweet
- cobblemon:berry_sweet
- cobblemon:clover_sweet
- cobblemon:flower_sweet
- cobblemon:star_sweet
- cobblemon:ribbon_sweet
- #cobblemon:teapots
- #cobblemon:teacups
- cobblemon:sweet_apple
- cobblemon:tart_apple
- cobblemon:galarica_cuff
- cobblemon:galarica_wreath
- cobblemon:black_augurite
- cobblemon:peat_block
- #cobblemon:evolution_stones
- cobblemon:razor_claw
- cobblemon:razor_fang
- cobblemon:auspicious_armor
- cobblemon:malicious_armor

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_stones</summary>

- cobblemon:dawn_stone
- cobblemon:dusk_stone
- cobblemon:fire_stone
- cobblemon:ice_stone
- cobblemon:leaf_stone
- cobblemon:moon_stone
- cobblemon:shiny_stone
- cobblemon:sun_stone
- cobblemon:thunder_stone
- cobblemon:water_stone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:experience_candies</summary>

- cobblemon:rare_candy
- cobblemon:exp_candy_xs
- cobblemon:exp_candy_s
- cobblemon:exp_candy_m
- cobblemon:exp_candy_l
- cobblemon:exp_candy_xl

</details>

<details>
<summary><b>Tag:</b> #cobblemon:feathers</summary>

- cobblemon:health_feather
- cobblemon:muscle_feather
- cobblemon:resist_feather
- cobblemon:genius_feather
- cobblemon:clever_feather
- cobblemon:swift_feather

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fire_stone_ores</summary>

- cobblemon:fire_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:nether_fire_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fossils</summary>

- cobblemon:helix_fossil
- cobblemon:dome_fossil
- cobblemon:old_amber_fossil
- cobblemon:root_fossil
- cobblemon:claw_fossil
- cobblemon:skull_fossil
- cobblemon:armor_fossil
- cobblemon:cover_fossil
- cobblemon:plume_fossil
- cobblemon:jaw_fossil
- cobblemon:sail_fossil
- cobblemon:fossilized_bird
- cobblemon:fossilized_fish
- cobblemon:fossilized_drake
- cobblemon:fossilized_dino

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fossil_machine_parts</summary>

- cobblemon:restoration_tank
- cobblemon:monitor
- cobblemon:fossil_analyzer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hanging_signs</summary>

- cobblemon:apricorn_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:herbs</summary>

- cobblemon:revival_herb
- cobblemon:mirror_herb
- cobblemon:white_herb
- cobblemon:mental_herb
- cobblemon:power_herb

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ice_stone_ores</summary>

- cobblemon:ice_stone_ore
- cobblemon:deepslate_ice_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaf_stone_ores</summary>

- cobblemon:leaf_stone_ore
- cobblemon:deepslate_leaf_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:machines</summary>

- cobblemon:healing_machine
- cobblemon:pc
- cobblemon:pasture
- cobblemon:restoration_tank
- cobblemon:monitor
- cobblemon:fossil_analyzer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mints</summary>

- cobblemon:lonely_mint
- cobblemon:adamant_mint
- cobblemon:naughty_mint
- cobblemon:brave_mint
- cobblemon:bold_mint
- cobblemon:impish_mint
- cobblemon:lax_mint
- cobblemon:relaxed_mint
- cobblemon:modest_mint
- cobblemon:mild_mint
- cobblemon:rash_mint
- cobblemon:quiet_mint
- cobblemon:calm_mint
- cobblemon:gentle_mint
- cobblemon:careful_mint
- cobblemon:sassy_mint
- cobblemon:timid_mint
- cobblemon:hasty_mint
- cobblemon:jolly_mint
- cobblemon:naive_mint
- cobblemon:serious_mint

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mint_leaf</summary>

- cobblemon:red_mint_leaf
- cobblemon:blue_mint_leaf
- cobblemon:cyan_mint_leaf
- cobblemon:pink_mint_leaf
- cobblemon:green_mint_leaf
- cobblemon:white_mint_leaf

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mint_seeds</summary>

- cobblemon:red_mint_seeds
- cobblemon:blue_mint_seeds
- cobblemon:cyan_mint_seeds
- cobblemon:pink_mint_seeds
- cobblemon:green_mint_seeds
- cobblemon:white_mint_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:moon_stone_ores</summary>

- cobblemon:moon_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:dripstone_moon_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mutated_berries</summary>

- cobblemon:leppa_berry
- cobblemon:lum_berry
- cobblemon:figy_berry
- cobblemon:wiki_berry
- cobblemon:mago_berry
- cobblemon:aguav_berry
- cobblemon:iapapa_berry
- cobblemon:sitrus_berry
- cobblemon:touga_berry
- cobblemon:cornn_berry
- cobblemon:magost_berry
- cobblemon:rabuta_berry
- cobblemon:nomel_berry
- cobblemon:enigma_berry
- cobblemon:pomeg_berry
- cobblemon:kelpsy_berry
- cobblemon:qualot_berry
- cobblemon:hondew_berry
- cobblemon:grepa_berry
- cobblemon:tamato_berry
- cobblemon:spelon_berry
- cobblemon:pamtre_berry
- cobblemon:watmel_berry
- cobblemon:durin_berry
- cobblemon:belue_berry
- cobblemon:kee_berry
- cobblemon:maranga_berry
- cobblemon:hopo_berry
- cobblemon:liechi_berry
- cobblemon:ganlon_berry
- cobblemon:salac_berry
- cobblemon:petaya_berry
- cobblemon:apicot_berry
- cobblemon:lansat_berry
- cobblemon:starf_berry
- cobblemon:micle_berry
- cobblemon:custap_berry
- cobblemon:jaboca_berry
- cobblemon:rowap_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:plants</summary>

- #cobblemon:cobblemon_seeds
- #cobblemon:apricorns
- #cobblemon:apricorn_sprouts
- #cobblemon:mint_leaf
- #cobblemon:berries
- #cobblemon:herbs
- cobblemon:vivichoke
- cobblemon:medicinal_leek
- cobblemon:big_root
- cobblemon:energy_root
- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:poke_balls</summary>

- cobblemon:poke_ball
- cobblemon:slate_ball
- cobblemon:azure_ball
- cobblemon:verdant_ball
- cobblemon:roseate_ball
- cobblemon:citrine_ball
- cobblemon:great_ball
- cobblemon:ultra_ball
- cobblemon:master_ball
- cobblemon:safari_ball
- cobblemon:fast_ball
- cobblemon:level_ball
- cobblemon:lure_ball
- cobblemon:heavy_ball
- cobblemon:love_ball
- cobblemon:friend_ball
- cobblemon:moon_ball
- cobblemon:sport_ball
- cobblemon:net_ball
- cobblemon:dive_ball
- cobblemon:nest_ball
- cobblemon:repeat_ball
- cobblemon:timer_ball
- cobblemon:luxury_ball
- cobblemon:premier_ball
- cobblemon:dusk_ball
- cobblemon:heal_ball
- cobblemon:quick_ball
- cobblemon:cherish_ball
- cobblemon:park_ball
- cobblemon:dream_ball
- cobblemon:beast_ball
- #cobblemon:ancient_poke_balls

</details>

<details>
<summary><b>Tag:</b> #cobblemon:potions</summary>

- cobblemon:potion
- cobblemon:super_potion
- cobblemon:hyper_potion
- cobblemon:max_potion
- cobblemon:full_restore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:protein_ingredients</summary>

- minecraft:beef
- minecraft:chicken
- minecraft:mutton
- minecraft:porkchop
- minecraft:rabbit

</details>

<details>
<summary><b>Tag:</b> #cobblemon:raw_meat</summary>

- minecraft:beef
- minecraft:porkchop
- minecraft:chicken
- minecraft:mutton
- minecraft:rabbit
- minecraft:cod
- minecraft:salmon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_tumblestones</summary>

- cobblemon:small_budding_tumblestone
- cobblemon:medium_budding_tumblestone
- cobblemon:large_budding_tumblestone
- cobblemon:tumblestone_cluster
- cobblemon:tumblestone_block
- cobblemon:tumblestone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:remedies</summary>

- cobblemon:remedy
- cobblemon:fine_remedy
- cobblemon:superb_remedy
- cobblemon:heal_powder

</details>

<details>
<summary><b>Tag:</b> #cobblemon:restores</summary>

- cobblemon:antidote
- cobblemon:awakening
- cobblemon:burn_heal
- cobblemon:ice_heal
- cobblemon:paralyze_heal
- cobblemon:full_heal
- cobblemon:full_restore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:revives</summary>

- cobblemon:revive
- cobblemon:max_revive

</details>

<details>
<summary><b>Tag:</b> #cobblemon:seeds</summary>

- minecraft:wheat_seeds
- minecraft:melon_seeds
- minecraft:pumpkin_seeds
- minecraft:beetroot_seeds
- minecraft:torchflower_seeds
- #cobblemon:cobblemon_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:shiny_stone_ores</summary>

- cobblemon:shiny_stone_ore
- cobblemon:deepslate_shiny_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- cobblemon:apricorn_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sky_tumblestones</summary>

- cobblemon:small_budding_sky_tumblestone
- cobblemon:medium_budding_sky_tumblestone
- cobblemon:large_budding_sky_tumblestone
- cobblemon:sky_tumblestone_cluster
- cobblemon:sky_tumblestone_block
- cobblemon:sky_tumblestone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sun_stone_ores</summary>

- cobblemon:sun_stone_ore
- cobblemon:deepslate_sun_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sweets</summary>

- cobblemon:strawberry_sweet
- cobblemon:love_sweet
- cobblemon:berry_sweet
- cobblemon:clover_sweet
- cobblemon:flower_sweet
- cobblemon:star_sweet
- cobblemon:ribbon_sweet

</details>

<details>
<summary><b>Tag:</b> #cobblemon:teacups</summary>

- cobblemon:masterpiece_teacup
- cobblemon:unremarkable_teacup

</details>

<details>
<summary><b>Tag:</b> #cobblemon:teapots</summary>

- cobblemon:cracked_pot
- cobblemon:chipped_pot

</details>

<details>
<summary><b>Tag:</b> #cobblemon:thunder_stone_ores</summary>

- cobblemon:thunder_stone_ore
- cobblemon:deepslate_thunder_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_1_poke_balls</summary>

- cobblemon:poke_ball
- cobblemon:citrine_ball
- cobblemon:verdant_ball
- cobblemon:azure_ball
- cobblemon:roseate_ball
- cobblemon:slate_ball
- cobblemon:premier_ball
- cobblemon:safari_ball
- cobblemon:heal_ball
- cobblemon:ancient_poke_ball
- cobblemon:ancient_citrine_ball
- cobblemon:ancient_verdant_ball
- cobblemon:ancient_azure_ball
- cobblemon:ancient_roseate_ball
- cobblemon:ancient_slate_ball
- cobblemon:ancient_ivory_ball
- cobblemon:ancient_feather_ball
- cobblemon:ancient_heavy_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_1_poke_ball_materials</summary>

- minecraft:copper_ingot

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_2_poke_balls</summary>

- cobblemon:great_ball
- cobblemon:fast_ball
- cobblemon:level_ball
- cobblemon:lure_ball
- cobblemon:heavy_ball
- cobblemon:friend_ball
- cobblemon:moon_ball
- cobblemon:sport_ball
- cobblemon:park_ball
- cobblemon:net_ball
- cobblemon:dive_ball
- cobblemon:nest_ball
- cobblemon:ancient_great_ball
- cobblemon:ancient_wing_ball
- cobblemon:ancient_leaden_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_2_poke_ball_materials</summary>

- minecraft:iron_ingot

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_3_poke_balls</summary>

- cobblemon:ultra_ball
- cobblemon:love_ball
- cobblemon:repeat_ball
- cobblemon:timer_ball
- cobblemon:luxury_ball
- cobblemon:dusk_ball
- cobblemon:quick_ball
- cobblemon:ancient_ultra_ball
- cobblemon:ancient_jet_ball
- cobblemon:ancient_gigaton_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_3_poke_ball_materials</summary>

- minecraft:gold_ingot

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_4_poke_balls</summary>

- cobblemon:dream_ball
- cobblemon:beast_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_4_poke_ball_materials</summary>

- minecraft:diamond

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_5_poke_balls</summary>

- cobblemon:master_ball
- cobblemon:ancient_origin_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tumblestones</summary>

- cobblemon:tumblestone
- cobblemon:black_tumblestone
- cobblemon:sky_tumblestone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:type_gems</summary>

- cobblemon:normal_gem
- cobblemon:fire_gem
- cobblemon:water_gem
- cobblemon:grass_gem
- cobblemon:electric_gem
- cobblemon:rock_gem
- cobblemon:ground_gem
- cobblemon:bug_gem
- cobblemon:poison_gem
- cobblemon:ghost_gem
- cobblemon:psychic_gem
- cobblemon:dark_gem
- cobblemon:fairy_gem
- cobblemon:dragon_gem
- cobblemon:ice_gem
- cobblemon:fighting_gem
- cobblemon:flying_gem
- cobblemon:steel_gem

</details>

<details>
<summary><b>Tag:</b> #cobblemon:vitamins</summary>

- cobblemon:hp_up
- cobblemon:protein
- cobblemon:iron
- cobblemon:calcium
- cobblemon:zinc
- cobblemon:carbos
- cobblemon:pp_up
- cobblemon:pp_max

</details>

<details>
<summary><b>Tag:</b> #cobblemon:water_stone_ores</summary>

- cobblemon:water_stone_ore
- cobblemon:deepslate_water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:x_items</summary>

- cobblemon:x_attack
- cobblemon:x_defence
- cobblemon:x_special_attack
- cobblemon:x_special_defence
- cobblemon:x_speed
- cobblemon:x_accuracy
- cobblemon:dire_hit
- cobblemon:guard_spec

</details>

<details>
<summary><b>Tag:</b> #cobblemon:zinc_ingredients</summary>

- minecraft:cod
- minecraft:salmon
- minecraft:tropical_fish

</details>

<details>
<summary><b>Tag:</b> #held:consumed_in_npc_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #held:consumed_in_pvp_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #held:consumed_in_wild_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #held:destiny_knot</summary>

- cobblemon:destiny_knot

</details>

<details>
<summary><b>Tag:</b> #held:everstone</summary>

- cobblemon:everstone

</details>

<details>
<summary><b>Tag:</b> #held:experience_share</summary>

- cobblemon:exp_share

</details>

<details>
<summary><b>Tag:</b> #held:is_friendship_booster</summary>

- cobblemon:soothe_bell

</details>

<details>
<summary><b>Tag:</b> #held:is_held_item</summary>

- cobblemon:ability_shield
- cobblemon:absorb_bulb
- cobblemon:air_balloon
- cobblemon:assault_vest
- cobblemon:big_root
- cobblemon:binding_band
- cobblemon:black_belt
- cobblemon:black_glasses
- cobblemon:black_sludge
- cobblemon:blunder_policy
- cobblemon:cell_battery
- cobblemon:charcoal_stick
- cobblemon:choice_band
- cobblemon:choice_scarf
- cobblemon:choice_specs
- cobblemon:cleanse_tag
- cobblemon:covert_cloak
- cobblemon:destiny_knot
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth
- cobblemon:dragon_fang
- cobblemon:eject_button
- cobblemon:eject_pack
- cobblemon:everstone
- cobblemon:eviolite
- cobblemon:exp_share
- cobblemon:expert_belt
- cobblemon:fairy_feather
- cobblemon:flame_orb
- cobblemon:float_stone
- cobblemon:focus_band
- cobblemon:focus_sash
- cobblemon:hard_stone
- cobblemon:heavy_duty_boots
- cobblemon:iron_ball
- cobblemon:kings_rock
- cobblemon:leftovers
- cobblemon:life_orb
- cobblemon:light_ball
- cobblemon:light_clay
- cobblemon:loaded_dice
- cobblemon:lucky_egg
- cobblemon:magnet
- cobblemon:metal_coat
- cobblemon:miracle_seed
- cobblemon:muscle_band
- cobblemon:mystic_water
- cobblemon:never_melt_ice
- cobblemon:poison_barb
- cobblemon:power_anklet
- cobblemon:power_band
- cobblemon:power_belt
- cobblemon:power_bracer
- cobblemon:power_lens
- cobblemon:power_weight
- cobblemon:quick_claw
- cobblemon:razor_claw
- cobblemon:razor_fang
- cobblemon:red_card
- cobblemon:ring_target
- cobblemon:rocky_helmet
- cobblemon:safety_goggles
- cobblemon:sharp_beak
- cobblemon:shell_bell
- cobblemon:silk_scarf
- cobblemon:silver_powder
- cobblemon:smoke_ball
- cobblemon:soft_sand
- cobblemon:spell_tag
- cobblemon:sticky_barb
- cobblemon:toxic_orb
- cobblemon:twisted_spoon
- cobblemon:weakness_policy
- cobblemon:wise_glasses
- cobblemon:bright_powder
- cobblemon:metal_powder
- cobblemon:quick_powder
- cobblemon:mental_herb
- cobblemon:mirror_herb
- cobblemon:power_herb
- cobblemon:white_herb
- cobblemon:damp_rock
- cobblemon:heat_rock
- cobblemon:smooth_rock
- cobblemon:icy_rock
- cobblemon:life_orb
- cobblemon:toxic_orb
- cobblemon:flame_orb
- cobblemon:white_herb
- cobblemon:smoke_ball
- cobblemon:lucky_egg
- cobblemon:kings_rock
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth
- cobblemon:metal_coat
- cobblemon:medicinal_leek
- minecraft:bone
- minecraft:snowball
- #cobblemon:type_gems

</details>

<details>
<summary><b>Tag:</b> #held:leaves_leftovers</summary>

- minecraft:apple

</details>

<details>
<summary><b>Tag:</b> #held:lucky_egg</summary>

- cobblemon:lucky_egg

</details>

<details>
<summary><b>Tag:</b> #held:power_anklet</summary>

- cobblemon:power_anklet

</details>

<details>
<summary><b>Tag:</b> #held:power_band</summary>

- cobblemon:power_band

</details>

<details>
<summary><b>Tag:</b> #held:power_belt</summary>

- cobblemon:power_belt

</details>

<details>
<summary><b>Tag:</b> #held:power_bracer</summary>

- cobblemon:power_bracer

</details>

<details>
<summary><b>Tag:</b> #held:power_lens</summary>

- cobblemon:power_lens

</details>

<details>
<summary><b>Tag:</b> #held:power_weight</summary>

- cobblemon:power_weight

</details>

<details>
<summary><b>Tag:</b> #cobblemon:boats</summary>

- #cobblemon:boats

</details>

<details>
<summary><b>Tag:</b> #cobblemon:chest_boats</summary>

- cobblemon:apricorn_chest_boat

</details>

<details>
<summary><b>Tag:</b> #cobblemon:decorated_pot_sherds</summary>

- #cobblemon:decorated_pot_sherds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fence_gates</summary>

- cobblemon:apricorn_fence_gate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hanging_signs</summary>

- #cobblemon:hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs</summary>

- cobblemon:apricorn_log
- cobblemon:stripped_apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs_that_burn</summary>

- cobblemon:apricorn_log
- cobblemon:stripped_apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:piglin_loved</summary>

- cobblemon:relic_coin_pouch
- cobblemon:relic_coin_sack
- cobblemon:relic_coin

</details>

<details>
<summary><b>Tag:</b> #cobblemon:planks</summary>

- cobblemon:apricorn_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:trim_templates</summary>

- cobblemon:automaton_armor_trim_smithing_template

</details>

<details>
<summary><b>Tag:</b> #cobblemon:villager_plantable_seeds</summary>

- cobblemon:blue_mint_seeds
- cobblemon:cyan_mint_seeds
- cobblemon:green_mint_seeds
- cobblemon:pink_mint_seeds
- cobblemon:red_mint_seeds
- cobblemon:white_mint_seeds
- cobblemon:revival_herb
- cobblemon:vivichoke_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_buttons</summary>

- cobblemon:apricorn_button

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_doors</summary>

- cobblemon:apricorn_door

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_pressure_plates</summary>

- cobblemon:apricorn_pressure_plate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_slabs</summary>

- cobblemon:apricorn_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_stairs</summary>

- cobblemon:apricorn_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_trapdoors</summary>

- cobblemon:apricorn_trapdoor

</details>
